[tool.poetry]
name = "pomodoro"
version = "0.5.1"
description = ""
authors = ["yemaney <yemane_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
playsound = "1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
mkdocs-material = "^8.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
